// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlbumImage url = lalala 1`] = `
<div>
  <div
    style="width: 100px; height: 100px; background: blue; background-image: url(lalala); background-size: contain;"
  >
     
  </div>
</div>
`;

exports[`AlbumImage url = undefined 1`] = `
<div>
  <div
    style="width: 100px; height: 100px; background: blue; background-image: none; background-size: contain;"
  >
     
  </div>
</div>
`;
